name:                ec
version:             0.1.0.0
synopsis:            A library for computing on elliptic curves
description:
  This library provides functionality for defining and computing on elliptic
  curve groups.
homepage:            https://github.com/bazad/ec
license:             PublicDomain
license-file:        LICENSE
author:              Brandon Azad <bazad@stanford.edu>
                     Nikhil Desai
maintainer:          bazad@stanford.edu
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10


extra-source-files:
  README.md


library
  hs-source-dirs: src
  exposed-modules:
    Crypto.EllipticCurve
    Crypto.Number
  other-modules:
    Crypto.EllipticCurve.Curve
    Crypto.EllipticCurve.Group
    Crypto.EllipticCurve.Point
    Crypto.Number.Bits
    Crypto.Number.Field
    Crypto.Number.Modular
    Crypto.Number.Power
    Crypto.Number.Prime
  build-depends:
    base >=4.6 && <4.7,
    ghc-prim,
    integer-gmp
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-type-defaults -fno-warn-name-shadowing


test-suite test-ec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    BasicECC
  build-depends:
    base >=4.6 && <4.7,
    ec,
    hspec,
    QuickCheck
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-type-defaults



